# decide

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  flake.nix
api/: Cargo.toml
api/src/: lib.rs
client/: .eslintrc  index.html  index.tsx  package-lock.json  package.json  preact.config.js  size-plugin.json  style.css  tsconfig.json  vite.config.js  wmr.config.mjs
client/public/: index.html  index.js  index.tsx  style.css
client/src/: copylink.tsx  index.js  index.tsx  rps.tsx  style.css  vote.tsx  websocket.tsx
decide/: Cargo.toml
decide/migrations/: 20230415004658_init.sql
decide/src/: condorcet.rs  main.rs  rps.rs  vote.rs
decide/src/vote/: db.rs  util.rs
loadtest/: Cargo.toml  shell.nix
loadtest/src/: main.rs
src/: main.rs  rps.rs  vote.rs
static/: index.html  rps.html  vote.html
