[package]
name = "rps"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Pfeiffer <spferical@gmail.com>"]
license = "Apache-2.0/MIT"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures-util = "0.3.17"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
