[package]
name = "decide_api"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Pfeiffer <spferical@gmail.com>"]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = "1.1.2"
