[package]
name = "decide"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Pfeiffer <spferical@gmail.com>"]
license = "Apache-2.0/MIT"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
futures-util = "0.3.17"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
itertools = "0.10"
decide_api = { version = "0.1.0", path = "../api" }
uuid = "1.1.2"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "time"] }
time = { version = "0.3.20", features = ["serde"] }
