[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide_api = { version = "0.1.0", path = "../api" }
futures-util = "0.3.28"
rand = { version = "0.8.5" }
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
